syntax = "proto3";

package godrive.v1;

// go_package controls the generated Go package/import path.
option go_package = "godrive/proto/godrive/v1;godrivev1";

message Empty {}

// ===== Auth =====
message User {
  int64 id = 1;
  string email = 2;
  string created_at = 3;
}

message Credentials {
  string email = 1;
  string password = 2;
}

message Token {
  string access_token = 1;
  string expires_at = 2;
}

service AuthService {
  rpc SignUp (Credentials) returns (User);
  rpc Login (Credentials) returns (Token);
  rpc Verify (Token) returns (User);
}

// ===== Files (metadata only, not bytes) =====
message FileItem {
  int64 id = 1;
  int64 owner_id = 2;
  string name = 3;
  string mime = 4;
  int64 size_bytes = 5;
  string created_at = 6;
  string version_id = 7;
}

message ListFilesRequest {
  int64 owner_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListFilesResponse {
  repeated FileItem files = 1;
  int32 next_page = 2;
}

message ConfirmUploadRequest {
  int64 owner_id = 1;
  string object_key = 2;
  string filename = 3;
  string mime = 4;
  int64 size_bytes = 5;
}

message ConfirmUploadResponse {
  FileItem file = 1;
}

message DownloadURLRequest {
  int64 owner_id = 1;
  int64 file_id = 2;
}

message DownloadURLResponse {
  string download_url = 1;
  string expires_at = 2;
}

message DeleteFileRequest {
  int64 owner_id = 1;
  int64 file_id = 2;
}

message DeleteFileResponse {
  bool ok = 1;
}

service FilesService {
  rpc List (ListFilesRequest) returns (ListFilesResponse);
  rpc ConfirmUpload (ConfirmUploadRequest) returns (ConfirmUploadResponse);
  rpc Delete (DeleteFileRequest) returns (DeleteFileResponse);
  rpc GetDownloadURL (DownloadURLRequest) returns (DownloadURLResponse);
}

// ===== Storage (S3/MinIO presigns) =====

message PresignUploadRequest {
  string object_key = 1;
  string mime = 2;
  int64 size_bytes = 3;
}

message PresignUploadResponse {
  string url = 1;
  map<string, string> headers = 2;
  string expires_at = 3;
}

message PresignDownloadRequest {
  string object_key = 1;
}

message PresignDownloadResponse {
  string url = 1;
  string expires_at = 2;
}

service StorageService {
  rpc PresignUpload (PresignUploadRequest) returns (PresignUploadResponse);
  rpc PresignDownload (PresignDownloadRequest) returns (PresignDownloadResponse);
}